--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Victor Nwoke"
 email: "victor_chinedu2003@yahoo.com"
-description: "Cloud Infrastructure Engineer | Microsoft Azure | Microsoft 365 Administrator | Windows Server | Technical Support | Cloud Automation & Security Enthusiast I DevOps"
+description: "Cloud Infrastructure Engineer | Microsoft Azure | Microsoft 365 Administrator | Windows Server | Technical Support | Cloud Automation & Security Enthusiast | DevOps"
 baseurl: ""
 url: "https://kunlesanni.com"
 linkedin_username: victornwoke
